--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,20 +4,25 @@ on: push
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        node: [18, 20]
+
+    # services:
+    #   redis:
+    #     image: redis
+    #     ports:
+    #       - 6379:6379
 
     steps:
-      - name: Install redis cli
-        run: sudo apt-get update -y && sudo apt-get install redis-tools -y
+      # - name: Install redis cli
+      #   run: sudo apt-get update -y && sudo apt-get install redis-tools -y
       
-      - name: Test redis
-        run: redis-cli -h localhost -p 6379 ping
+      # - name: Test redis
+      #   run: redis-cli -h localhost -p 6379 ping
 
       - name: Print variable
         run: "echo ${{ secrets.TOKEN_SECRET }}"
@@ -28,7 +33,7 @@ jobs:
       - name: Setup
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: ${{ matrix.node }}
 
       - name: Instalar dependencias
         run: npm install
@@ -40,6 +45,7 @@ jobs:
         run: npm run build
 
       - name: Upload artifact
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.node == 18 }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: public/
@@ -61,3 +67,19 @@ jobs:
       - name: Deploy
         id: deployment-pages
         uses: actions/deploy-pages@v4
+    
+  # notify:
+  #   runs-on: ubuntu-latest
+
+  #   needs: deploy
+
+  #   if: always()
+
+    # steps:
+    #   - name: Notify to slack
+    #     uses: 8398a7/action-slack@3
+    #     env:
+    #       SLACK_WEBHOOK_URL: ${{ secrets.SLACK }}
+    #     with:
+    #       status: ${{ job.status }}
+    #       fields: repo, commit, author, job, took
